bad/assign_field_bool_arr_elem_string.example_compiler_output
ERROR
[1mbad/assign_field_bool_arr_elem_string.lat:7:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	(new C[1])[2].fld = "";
	                  [1;32m^[m
